# erpc-rs

./: .gitignore  Cargo.toml  README.md
erpc-examples/: Cargo.toml
erpc-examples/src/: client.rs  client_raw.rs  client_test.rs  server.rs  server_raw.rs  server_test.rs
erpc-sys/: Cargo.toml  README.md  build.rs
erpc-sys/src/: client.cpp  common.h  ffi.cpp  ffi.rs  lib.rs  server.cpp
examples/: client.rs  client_raw.rs  server.rs  server_raw.rs
src/: context.rs  lib.rs  msgbuffs.rs  nexus.rs  reqhandle.rs  rpc.rs
