[package]
name = "erpc-rs"
version = "0.1.1"
authors = ["Frank Zhou <529808348@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erpc-sys = { path = "erpc-sys", version = "0.1" }

[workspace]
members = [
    "erpc-examples",
	"erpc-sys"
]