[package]
name = "erpc-examples"
version = "0.1.0"
authors = ["Frank Zhou <529808348@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erpc-sys = { version="0.1", path = "../erpc-sys" }
erpc-rs = { version="0.1", path = "../" }
libc = "0.2"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client_raw"
path = "src/client_raw.rs"

[[bin]]
name = "server_raw"
path = "src/server_raw.rs"

[[bin]]
name = "client_test"
path = "src/client_test.rs"

[[bin]]
name = "server_test"
path = "src/server_test.rs"
