[package]
name = "erpc-sys"
version = "0.1.1"
authors = ["Frank Zhou <529808348@qq.com>"]
edition = "2018"
keywords = ["erpc", "rpc", "rust", "ffi"]
repository = "https://github.com/coinrust/erpc-rs"
readme = "README.md"
description = "The Rust FFI bindings of eRPC"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
dirs = "2.0"
cc = "1.0"
